Fixed card gap issue, added status header borders

--- a/css/style.css
+++ b/css/style.css
@@ -30,23 +30,36 @@
 .taskStatusDone {
   color: rgb(200, 0, 0);
 }
+.taskStatusDone-border {
+  border: 1px solid rgba(200, 0, 0, 0.2);
+  border-radius: 4px;
+}
 
 .taskStatusReview {
   color: rgb(216, 158, 0);
+}
+.taskStatusReview-border {
+  border: 1px solid rgba(216, 158, 0, 0.2);
+  border-radius: 4px;
 }
 
 .taskStatusInProgress {
   color: rgb(0, 126, 10);
 }
+.taskStatusInProgress-border {
+  border: 1px solid rgba(0, 126, 10, 0.2);
+  border-radius: 4px;
+}
 
 .taskStatusToDo {
   color: rgb(61, 65, 255);
-}
+  }
 
 .taskStatusToDo-border {
   border: 1px solid rgba(61, 65, 255, 0.2);
   border-radius: 4px;
 }
+
 
 .taskform {
   color: rgb(0, 0, 0);
@@ -56,18 +69,8 @@
   border-radius: 10px;
 }
 
-.card {
-  width: auto;
-  height: auto;
-  /* margin: 10px; */
-}
-
 a {
   text-decoration: none;
-}
-
-ul {
-  list-style-type: none;
 }
 
 @media only screen and (min-width: 1420px) {
